<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:contentDescription="@string/image"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/logo_streetfoodtracker" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:endColor="@color/red_700"
                android:startColor="@color/myColorPrimary"
                android:visibility="gone"
                tools:ignore="MissingConstraints" />
        </LinearLayout>


        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray" />


        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray" />

        <!-- Login Button -->
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@drawable/button_shape"
            android:text="@string/login"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/sign_in_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:fontFamily="@font/poppins_reg"
            android:gravity="center"
            android:text="@string/createAccount"
            android:textAllCaps="false"
            android:textSize="15sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <com.google.android.gms.common.SignInButton
            android:paddingTop="10dp"
            android:id="@+id/sign_in_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:paddingTop="30dp"
            android:text="@string/version_code"
            android:textAlignment="center"
            android:textSize="10sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>